# cf_solver

./: .gitignore  .pre-commit-config.yaml  =0.12.0  CLAUDE.md  DEPLOYMENT.md  ETHICAL_USAGE.md  LICENSE  README.md  SECURITY.md  _ul-TP-5CG2343SZ9  cloudflare_detection_test.py  cloudflare_scraper_standalone.py  cloudscraper_replacement_demo.py  create_deployment_package.py  debian11_fix.py  debian12_installation_guide.md  debian_full_test.py  debian_server_test.py  detailed_bypass_analysis.json  fix_python39_compatibility.py  high_concurrency_test_results.json  install_missing_deps.py  kick_api_test.py  kick_test_standalone.py  performance_validation_report.json  plan.txt  pyproject.toml  quick_debian11_fix.sh  quick_server_test.py  quick_test_fixed.py  quickstart_integration_results.json  requirements-dev.txt  requirements.txt  server_deployment_guide.md  server_quickstart.md  setup.cfg  setup.py  simple_cloudscraper_example.py  specify.txt  step_by_step_test.py  (+3 more)
.claude/: settings.local.json
.github/workflows/: cloudflare-bypass-test.yml
.specify/memory/: constitution.md
benchmarks/: memory_usage.py  stress_test.py  throughput.py
cloudflare_research/: __init__.py  bypass.py  challenges.py  metrics.py  scraper.py  session.py
cloudflare_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cloudflare_research/browser/: __init__.py  fingerprint.py  headers.py  timing.py
cloudflare_research/challenge/: __init__.py  detector.py  handler.py  parser.py  solver.py  turnstile.py
cloudflare_research/cli/: __init__.py  __main__.py  benchmark.py  requests.py
cloudflare_research/concurrency/: __init__.py  manager.py  monitor.py  rate_limiter.py
cloudflare_research/http/: __init__.py  client.py  cookies.py  http2.py  response.py
cloudflare_research/models/: __init__.py  challenge_record.py  performance_metrics.py  test_configuration.py  test_request.py  test_session.py
cloudflare_research/tls/: __init__.py  client.py  fingerprint.py
cloudflare_research/utils/: __init__.py  resources.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: browser.rst  bypass.rst  challenge.rst  cli.rst  concurrency.rst  http.rst  metrics.rst  models.rst  session.rst
docs/development/: architecture.rst  contributing.rst  testing.rst
docs/user_guide/: configuration.rst  examples.rst  installation.rst  troubleshooting.rst
examples/: basic_usage.py  challenge_solving.py  concurrent_requests.py  custom_config.py
scripts/: prepare_commit.sh  quick_deploy.sh
specs/002-specify-txt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-specify-txt/contracts/: cloudflare_bypass_api.yaml  python_module_interface.py
tests/: detailed_bypass_analysis.py  high_concurrency_test.py  performance_report.py  performance_validation.py  quickstart_integration_test.py
tests/contract/: test_bypass_batch.py  test_bypass_get.py  test_bypass_post.py  test_challenge_detector.py  test_javascript_solver.py  test_metrics_export.py  test_session_management.py
tests/integration/: test_challenge_handling.py  test_chrome_emulation.py  test_data_export.py  test_high_concurrency.py  test_resource_management.py
tests/unit/: test_browser_emulation.py  test_challenge_detector.py  test_http_client.py  test_models.py  test_performance.py  test_tls_fingerprint.py
