[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare_research"
version = "1.0.0"
description = "High-performance browser emulation module for Cloudflare challenge research"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CF Solver Research", email = "research@example.com"}
]
maintainers = [
    {name = "CF Solver Research", email = "research@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.5.0",
    "aiohttp>=3.9.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "mini-racer>=0.12.0",
    "asyncio-throttle>=1.0.0",
    "typing-extensions>=4.0.0",
    "anyio>=3.6.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
cloudflare-research = "cloudflare_research.cli:main"

[project.urls]
Homepage = "https://github.com/example/cloudflare_research"
Documentation = "https://cloudflare-research.readthedocs.io/"
Repository = "https://github.com/example/cloudflare_research.git"
"Bug Tracker" = "https://github.com/example/cloudflare_research/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudflare_research*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "contract: marks tests as contract tests",
    "asyncio: marks tests as asyncio tests",
]

[tool.coverage.run]
source = ["cloudflare_research"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]